--- a/private/html-email-new-message.html
+++ b/private/html-email-new-message.html
@@ -2,10 +2,15 @@
 <head>
   <meta name="viewport" content="width=device-width" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <title>You start sharing</title>
+  <title>New message</title>
   <link href="styles.css" media="all" rel="stylesheet" type="text/css" />
 </head>
 <body>
-  <a href="{{siteUri}}/things/{{thing.slug}}">{{thing.name}}</a> is being shared with others now on BookAnything.com!
+  <p>
+    You've got a new message regarding {{thing.name}}:<br/>
+    {{message.text}}<br />
+    <br />
+    You can see it <a href="{{siteUri}}/deals/{{deal.slug}}">here</a>.
+  </p>
 </body>
 </html>
