either owner sending to borrower or borrower sending to owner

--- a/private/html-email-new-message.html
+++ b/private/html-email-new-message.html
@@ -10,7 +10,7 @@
     You've got a new message regarding {{thing.name}}:<br/>
     {{message.text}}<br />
     <br />
-    You can see it <a href="{{siteUri}}/deals/{{deal.slug}}">here</a>.
+    You can see it <a href="{{siteUri}}/deals/{{deal.slug}}#{{msg._id}}">here</a>.
   </p>
 </body>
 </html>
